--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -15,6 +15,21 @@
 <body>
   <div  id="wrapper"
         class="wrapper">
+
+    <div  id="player"
+          class="player">
+      <div  id="bat"
+            class="bat">
+        <div  id="knockback"
+              class="knockback">
+        </div>
+
+        <div  id="absorb"
+              class="absorb">
+        </div>
+      </div>
+    </div>
+
   </div> <!-- end wrapper -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
