--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -30,6 +30,8 @@
       </div>
     </div>
 
+    <div class="enemy"></div>
+
   </div> <!-- end wrapper -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
