Convert test enemy to "Enemy" class with instance.
The enemies are anonymous and handle the collision detection.

--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="enemy"></div>
+    <div class="enemy template"></div>
 
   </div> <!-- end wrapper -->
 
