--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -18,14 +18,14 @@
 
     <div  id="player"
           class="player">
-      <div  id="bat"
-            class="bat">
-        <div  id="knockback"
-              class="knockback">
+      <div  id="weapon"
+            class="weapon">
+        <div  id="handle"
+              class="handle">
         </div>
 
-        <div  id="absorb"
-              class="absorb">
+        <div  id="beam"
+              class="beam knockback">
         </div>
       </div>
     </div>
