Convert Player "weapon" and its components to GameObjects.

--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -30,6 +30,10 @@
       </div>
     </div>
 
+    <div  id="beamAttackHitbox"
+          class="beamAttackHitbox">
+    </div>
+
     <div class="enemy template"></div>
 
   </div> <!-- end wrapper -->
