Add animated starfield.

--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -16,6 +16,10 @@
   <div  id="wrapper"
         class="wrapper">
 
+    <div  id="stars"
+          class="stars">
+    </div>
+
     <div  id="beamAttackHitbox"
           class="beamAttackHitbox">
     </div>
