Better system for pausing animated elements.

--- a/gmtk-jam-2017.html
+++ b/gmtk-jam-2017.html
@@ -21,11 +21,11 @@
     </div>
 
     <div  id="beamAttackHitbox"
-          class="beamAttackHitbox">
+          class="beamAttackHitbox animated">
     </div>
 
     <div  id="player"
-          class="player">
+          class="player animated">
       <div  id="weapon"
             class="weapon">
         <div  id="handle"
